--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -15,3 +15,13 @@ include ../blocks/tooltip/tooltip
 include ../blocks/dropdown/dropdown
 include ../blocks/form/form
 include ../blocks/content-zone/content-zone
+include ../components/header/header
+include ../components/offer/offer
+include ../components/section/section
+include ../components/two-columns/two-columns
+include ../components/news/news
+include ../components/video/video
+include ../components/footer/footer
+include ../components/socials/socials
+include ../components/scroll-top/scroll-top
+include ../components/team/team
