--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -1,7 +1,42 @@
 extends ../../layouts/default
 
 block head
-  - var pageTitle = projectName + ' | index'
+  - var pageTitle = projectName + ' | Главная'
 
 block content
-  p Страница: index
+  +header
+  +offer#offer
+  +section
+    .container
+      +two-columns
+        +two-columns-left
+          +section-header
+            +section-title О проекте
+          +section-content
+            +section-description Сегодня на территории Российской Федерации свыше 30 ГВт генерирующих мощностей работают в парогазовом цикле. Доля оборудования иностранных компаний в суммарной установленной мощности введенных в эксплуатацию ПГУ и ГТУ составляет более 70%.
+            +content-zone
+              img(src="assets/images/content/1.jpg")
+              p
+                b В 2018 году Правительством России в целях обеспечения энергобезопасности и энергонезависимости принято решение о воссоздании в стране отечественного производства газовых турбин. В это же время «Силовые машины», с учетом достижений в традиционной для предприятия области паровых турбин
+              p значительным опытом в освоении новых видов продукции и накопленным опытом по созданию газотурбинных установок в прошлом, начали программу освоения производства современных отечественных энергетических газовых турбин класса ГТЭ-65 и ГТЭ-170.
+              p К концу 2019 года на предприятии было воссоздано конструкторское бюро газотурбинных установок, разработана конструкторская документация, реализуется масштабный комплекс научно-исследовательских и опытно-конструкторских работ, определены отечественные поставщики критически важных комплектующих и заготовок, ведется модернизация собственной производственной и экспериментально-исследовательской базы.
+              p В 2019 году «Силовые машины» одержали победу в конкурсе Министерства промышленности и торговли РФ на право получения субсидии на проведение научно-исследовательских, опытно-конструкторских и технологических работ в рамках производства газовых турбин большой мощности. В настоящее время при поддержке Минпромторга России «Силовые машины» проводят комплекс НИОКР в партнерстве с ключевыми научно-исследовательскими и промышленными организациями страны - Сибирское отделение РАН, НПО ЦКТИ, ЦИАМ, ВТИ, ЦНИИТМАШ и многие другие.
+              blockquote Благодаря этой работе «Силовые машины» смогут в краткосрочной перспективе предложить рынку две полностью российские газовые турбины — 65 МВт и 170 МВт.
+              p К концу 2019 года на предприятии было воссоздано конструкторское бюро газотурбинных установок, реализуется масштабный комплекс научно-исследовательских и опытно-конструкторских работ, определены отечественные поставщики критически важных комплектующих и заготовок, ведется модернизация собственной производственной и экспериментально-исследовательской базы. Первые образцы ГТЭ-170 будут запущены в опытно-промышленную эксплуатацию в 2022–2023 годах, а ГТЭ-65 — с 2024-го.
+              p Газовые турбины ГТЭ-65 и ГТЭ-170 могут использоваться в составе парогазовых установок как в моноблоке с индивидуальной паровой турбиной, так и в дубль-блоке с общей, на две ГТУ, паровой турбиной.
+              p Успешное освоение технологии производства газовых турбин российской компанией позволит снизить зависимость отечественной энергетики от импорта данного типа оборудования, обеспечит энергетическую и технологическую безопасность государства.
+              p
+                a(href="#") Подробнее
+
+        +two-columns-right
+          +news(getData('news'))
+          +video
+
+  +section
+    .container
+      +section-header
+        +section-title Команда
+      +section-content
+        +team
+
+  +footer
