--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -172,3 +172,43 @@ block content
 
     //- Блок content-zone
     +ui-kit-content-zone
+
+    //- Компонент header
+    +ui-kit-header
+  
+
+    //- Компонент offer
+    +ui-kit-offer
+  
+
+    //- Компонент section
+    +ui-kit-section
+  
+
+    //- Компонент two-columns
+    +ui-kit-two-columns
+  
+
+    //- Компонент news
+    +ui-kit-news
+  
+
+    //- Компонент video
+    +ui-kit-video
+  
+
+    //- Компонент footer
+    +ui-kit-footer
+  
+
+    //- Компонент socials
+    +ui-kit-socials
+  
+
+    //- Компонент scroll-top
+    +ui-kit-scroll-top
+  
+
+    //- Компонент team
+    +ui-kit-team
+  
