--- a/app/styles/helpers/_mixins.scss
+++ b/app/styles/helpers/_mixins.scss
@@ -240,7 +240,7 @@ div {
     src: url($path + $fontname + '.eot');
     src:
       url('' + $path + $fontname + '.eot?#iefix') format('embedded-opentype'),
-      url('' + $path + $fontname + '.otf') format('opentype'),
+      // url('' + $path + $fontname + '.otf') format('opentype'),
       url('' + $path + $fontname + '.woff2') format('woff2'),
       url('' + $path + $fontname + '.woff') format('woff'),
       url('' + $path + $fontname + '.ttf') format('truetype'),
