--- a/app/blocks/popups/popups.pug
+++ b/app/blocks/popups/popups.pug
@@ -1,10 +1,48 @@
 mixin popups()
   +b.popups&attributes(attributes)
-    block
+    +popup#popup-history
 
 mixin popup()
   +b.popup&attributes(attributes)
-    block
+    .container
+      +content-zone.content-zone_history
+        h2 История
+        p
+          strong Выбор «Силовых машин» в качестве интегратора проекта создания российской ГТУ большой мощности не случаен. Любой подобный проект сложно начинать с нуля, и «Силовые машины» готовы обобщить весь накопленный опыт по созданию газотурбинных установок.
+
+        h3 Начало пути
+        p История проектирования и производства ГТУ началась с 1957 г., когда на Ленинградском Металлическом заводе (ЛМЗ) была создана первая ГТ-12-3 мощностью 12 МВт с КПД 27 %. Результатом накопленного опыта явилось создание в 1959 г. новой серии ГТУ типа ГТ-25-700 мощностью 25 МВт с КПД 28 %.
+        p Прогрессивные решения конструкторского бюро были внедрены в 1962 году в серии из 10 агрегатов ГТН-9-750. Позднее, в 1970–1995 гг., велись работы по одной из самых выдающихся турбин своего времени ГТ-100-750 мощностью 105 МВт с КПД 28 %, которая в дальнейшем получила развитие в ГТЭ-150 мощностью 148 МВт с КПД 31 %. Две ГТЭ-150 работают с 1991 года по настоящее время на ГРЭС-3 им. Классона.
+        p Объем выпуска газовых турбин был небольшим, потому что основной акцент делался на серийное производство машин для паротурбинных энергоблоков.  Это требовалось, чтобы обеспечить рекордные темпы ввода электрической и тепловой мощности, необходимой для развивающейся экономики страны
+
+        h3 От «Турбоатомгаза» до «Интертурбо»
+        p 11 ноября 1973 г. вышло распоряжение Совета Министров СССР о строительстве филиала ЛМЗ. Предусматривалось создание корпуса газовых турбин с испытательным стендом и блока заготовительных цехов.
+        p В 1979 году принят в эксплуатацию 1-й пусковой комплекс газовых турбин, который получил название завод «Турбоатомгаз». В этом названии отражена основная задача предприятия – выпуск газовых и паровых турбин, агрегатов для АЭС.
+        p В 1991 году создано совместное российско-германское предприятие «Интертурбо» по производству газовых турбин с участием ЛМЗ и компании Siemens. Производственные помещения предприятия расположились в цехах «Турбоатомгаза». В 1993 г. на стенде «Интертурбо» собрана первая турбина для Индонезии. В 2004 г. у компании Siemens была куплена лицензия на изготовление V94.2 под брендом ГТЭ-160. В 2005 г. изготовлены для Калининградская ТЭЦ-2 и успешно сданы в эксплуатацию две первые отечественные газотурбинные установки типа ГТЭ-160. С начала изготовления велись работы по локализации производства основных узлов V94.2 (на площадях ЛМЗ изготовлены детали 57 установок  типа V94.2 и ГТЭ-160  в 1993–2012 гг.) вплоть до 2011 года, когда между «Силовыми машинами» и Siemens была достигнута договоренность о создании в России совместного предприятия «Сименс Технологии Газовых Турбин» (Siemens – 65 %, «Силовые машины» – 35 %) по производству и сервисному обслуживанию газовых турбин мощностью более 60 МВт для рынка России и СНГ.
+
+        h3 Российские разработки
+        p Производство надежной, но не самой современной установки V94.2, закрывало на тот момент, имеющийся российский спрос на ГТУ подобной мощности, но желание получить полностью отечественную турбину и уйти от импортозависимости диктовало необходимость создания собственной современной установки. С 2010 г. вплоть до осени 2011 г. специальное конструкторское бюро газовых турбин Ленинградского Металлического завода, которое впоследствии полностью перешло в состав совместного предприятия «Сименс Технологии Газовых Турбин», вело  разработку инновационного проекта «Разработка газотурбинной установки ГТЭ-170». В период с 1996 г. по конец 2011 г. была разработана конструкторская документация на турбину ГТЭ-180, сконструирован и изготовлен современный образец ГТУ F-класса ГТЭ-65, сделан проект ГТУ мощностью 300 МВт. Эти проекты служат серьезным заделом для разработки современных собственных турбин.
+
+        h3 ГТЭ-180
+        p Конверсия передовых технологий авиадвигателестроения стала основой создания отечественной ГТУ. Подобный подход использовали все мировые фирмы: Siemens при проектировании SGT5-4000F совместно с Pratt&Whitney использовал базу авиационного двигателя PW4000, General Electric разрабатывала установку серии MS9001FA на базе собственного авиационного двигателя CF6, а японская Mitsubishi Heavy Industries для M7001G использовала авиационный двигатель Trent от Rolls Royce. Исходя из этого, ЛМЗ в партнерстве с ОАО «Авиадвигатель» в 1996 г. начали разработку ГТЭ-180 на базе авиадвигателя ПС-90А. В 2003 г. технический проект ГТЭ-180 был успешно защищен на НТС РАО «ЕЭС России», но до реализации в железе дело не дошло. После 2003 г. в связи с отсутствием господдержки и выделения объекта (электростанции) для испытаний и доводки было принято решение о закрытии проекта ГТЭ-180 в пользу лицензии Siemens на производство V94.2 и ее русифицированной версии ГТЭ-160.
+        figure
+          img(src="assets/images/history/1.jpg")
+          figcaption ГТЭ-180 «ЛМЗ» – «Авиадвигатель» (N = 180 МВт, КПД = 36,5 %)
+        p Проект ГТЭ-180 получил дальнейшее развитие в ГТУ меньшей мощности ГТЭ-65, которая вобрала в себя лучшие наработки предшественника, к тому же на ЛМЗ и в ЦКТИ под проект были созданы уникальные испытательные стенды.  На ЛМЗ был построен стенд камер сгорания, в ЦКТИ экспериментальный стенд был дооборудован и модернизирован в части измерительных систем для исследования модельного компрессора.
+
+        h3 ГТЭ-65
+        p Прототип ГТЭ-65.0, изготовленный в 2008 году, разработан СКБ ГТ ЛМЗ на основе модельного компрессора ЦИАМ ЦКТИ и доработанного в начале 2000х в СНТК имени Кузнецова. Газотурбинная установка ГТЭ-65 выполнена по простой тепловой схеме в виде одновального двухопорного турбокомпрессора с частотой вращения ротора 5440 об/мин и приводом электрогенератора через редуктор.
+        figure
+          img(src="assets/images/history/2.jpg")
+          figcaption Газотурбинная установка ГТЭ-65
+        figure
+          img(src="assets/images/history/3.jpg")
+          figcaption ГТЭ-65 на транспортной раме в сборочном цехе «Силовых машин»
+        p В 2005–2008 гг. создан опытный образец, выполнены НИОКР, поузловые испытания проведены в НПО ЦКТИ, ЛМЗ.
+        p Во время первого этапа испытаний камеры сгорания на режиме полной нагрузки проводились предварительные испытания при давлении до 0,7 МПа, измерялись температуры пламенной трубы, неравномерность температур за камерой сгорания, выбросы NOx, настраивался алгоритм работы топливоподачи. На втором этапе использовался полноразмерный стенд огневых испытаний камер сгорания на газообразном топливе, специально созданный на ЛМЗ.
+        p Перспективная разработка конструкторов «Силовых машин» - ГТЭ-65 - была отмечена премией Правительства Санкт-Петербурга на I Петербургском международном инновационном форуме. Турбина обладает широкими возможностями применения при техническом перевооружении действующих электростанций и новом строительстве, способна обеспечивать теплофикационные нужды и работать как в парогазовых блоках, так и автономно. Головной образец ГТЭ-65 был отгружен на ТЭЦ-9 ОАО «Мосэнерго», смонтирован и поставлен на валоповорот с генератором.
+
+
 
 mixin ui-kit-popups
   +ui-section
