--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -15,7 +15,7 @@
     color: $color-basic;
     padding: 0;
     background: white;
-    box-shadow: 0px 9px 10px rgba(black, 0.03);
+    box-shadow: 0 9px 10px rgba(black, .03);
   }
 
   .container {
