--- a/app/components/video/video.pug
+++ b/app/components/video/video.pug
@@ -1,5 +1,5 @@
 mixin video()
-  +b.A.video(href="#").js-fancybox&attributes(attributes)
+  +b.A.video(href="https://youtu.be/EqdPqahyu-s").js-fancybox-dark&attributes(attributes)
     +e.button
       +icon('play')
     +e.IMG.preview(src="assets/images/video_preview.jpg")
