--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -25,3 +25,5 @@ include ../components/footer/footer
 include ../components/socials/socials
 include ../components/scroll-top/scroll-top
 include ../components/team/team
+include ../components/vacancies/vacancies
+include ../components/contacts/contacts
