--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -212,3 +212,11 @@ block content
     //- Компонент team
     +ui-kit-team
   
+
+    //- Компонент vacancices
+    +ui-kit-vacancices
+  
+
+    //- Компонент contacts
+    +ui-kit-contacts
+  
