--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -7,27 +7,38 @@
   h1, h2, h3, h4, h5, h6 {
 
     &:not(:first-child) {
-      margin-top: 10px;
+      margin-top: 40px;
     }
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 40px;
     }
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-size: 30px;
-    line-height: 1.5;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: (35/25);
   }
 
   p {
+
     &:not(:first-child) {
       margin-top: 40px;
     }
   }
 
+  strong {
+    color: black;
+    font-weight: inherit;
+  }
+
+  b {
+    font-weight: 500;
+  }
+
   a {
-    color: $color-main;
+    color: $color-blue;
     position: relative;
     padding-right: 16px;
 
@@ -87,20 +98,22 @@
   }
 
   ul, ol {
-    font-size: 14px;
-    line-height: 1.5;
 
     &:not(:first-child) {
-      margin-top: 30px;
+      margin-top: 40px;
     }
 
     &:not(:last-child) {
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
 
     li {
-      padding-left: 20px;
+      padding-left: 30px;
       position: relative;
+
+      &:not(:first-child) {
+        margin-top: 30px;
+      }
     }
   }
 
@@ -111,8 +124,12 @@
       &::before {
         position: absolute;
         left: 0;
-        top: 0;
-        content: '•';
+        top: 16px;
+        content: '';
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background: $color-main;
       }
     }
   }
@@ -128,6 +145,68 @@
         top: 0;
         counter-increment: list1;
         content: counter(list1) '.';
+      }
+    }
+  }
+
+  figure {
+    margin: 0;
+    display: block;
+    text-align: center;
+
+    img {
+      float: none;
+      display: block;
+      margin: 0 auto;
+      width: auto;
+      max-width: 100%;
+    }
+
+    figcaption {
+      display: block;
+      margin-top: 30px;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 30px;
+      color: black;
+    }
+
+    &:not(:first-child) {
+      margin-top: 70px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 70px;
+    }
+  }
+
+  // Modificators
+
+  &_history {
+
+    h2 {
+      font-weight: 300;
+      font-size: 41px;
+      line-height: 1.2;
+    }
+
+    strong {
+      font-size: 20px;
+      color: $color-basic;
+      font-weight: 400;
+    }
+
+    h3 {
+      font-size: 24px;
+      line-height: (34/24);
+      font-weight: 400;
+
+      &:not(:first-child) {
+        margin-top: 65px;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 40px;
       }
     }
   }
