--- a/app/components/news/news.scss
+++ b/app/components/news/news.scss
@@ -24,7 +24,7 @@
 
     &:hover {
       background: white;
-      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 16px rgba(0, 0, 0, .05);
 
       &::after {
         opacity: 1;
