--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -17,7 +17,7 @@ block content
             +content-zone
               img(src="assets/images/content/1.jpg")
               p
-                b В 2018 году Правительством России в целях обеспечения энергобезопасности и энергонезависимости принято решение о воссоздании в стране отечественного производства газовых турбин. В это же время «Силовые машины», с учетом достижений в традиционной для предприятия области паровых турбин
+                strong В 2018 году Правительством России в целях обеспечения энергобезопасности и энергонезависимости принято решение о воссоздании в стране отечественного производства газовых турбин. В это же время «Силовые машины», с учетом достижений в традиционной для предприятия области паровых турбин
               p значительным опытом в освоении новых видов продукции и накопленным опытом по созданию газотурбинных установок в прошлом, начали программу освоения производства современных отечественных энергетических газовых турбин класса ГТЭ-65 и ГТЭ-170.
               p К концу 2019 года на предприятии было воссоздано конструкторское бюро газотурбинных установок, разработана конструкторская документация, реализуется масштабный комплекс научно-исследовательских и опытно-конструкторских работ, определены отечественные поставщики критически важных комплектующих и заготовок, ведется модернизация собственной производственной и экспериментально-исследовательской базы.
               p В 2019 году «Силовые машины» одержали победу в конкурсе Министерства промышленности и торговли РФ на право получения субсидии на проведение научно-исследовательских, опытно-конструкторских и технологических работ в рамках производства газовых турбин большой мощности. В настоящее время при поддержке Минпромторга России «Силовые машины» проводят комплекс НИОКР в партнерстве с ключевыми научно-исследовательскими и промышленными организациями страны - Сибирское отделение РАН, НПО ЦКТИ, ЦИАМ, ВТИ, ЦНИИТМАШ и многие другие.
@@ -26,7 +26,7 @@ block content
               p Газовые турбины ГТЭ-65 и ГТЭ-170 могут использоваться в составе парогазовых установок как в моноблоке с индивидуальной паровой турбиной, так и в дубль-блоке с общей, на две ГТУ, паровой турбиной.
               p Успешное освоение технологии производства газовых турбин российской компанией позволит снизить зависимость отечественной энергетики от импорта данного типа оборудования, обеспечит энергетическую и технологическую безопасность государства.
               p
-                a(href="#") Подробнее
+                a(href="#popup-history").js-fancybox-content Подробнее
 
         +two-columns-right
           +news(getData('news'))
@@ -35,8 +35,41 @@ block content
   +section
     .container
       +section-header
+        +section-title Производство
+      +section-content
+        +section-description._width_1170 Сегодня на территории Российской Федерации свыше 30 ГВт генерирующих мощностей работают в парогазовом цикле. Доля оборудования иностранных компаний в суммарной установленной мощности введенных в эксплуатацию ПГУ и ГТУ составляет более 70%.
+        +two-columns.two-columns_equal
+          +two-columns-left
+            +content-zone
+              p
+                b Специально для производства газовых турбин в течение 2020 – 2021 гг. будет проведено дооснащение производства некоторыми группами оборудования, чтобы расшить узкие места. Общий объем планируемых инвестиций в дооснащение производства превышает 4 млрд руб. В частности, планируется воссоздание ранее существовавших технологических переходов, но на современном технологическом уровне, а именно:
+              ul
+                li высокоточное литье охлаждаемых лопаток турбины из жаропрочных материалов;
+                li нанесение защитных покрытий (антифрикционных, термобарьеных и антиэрозионных) на элементах горячего тракта;
+                li сборочное производство газовых турбин.
+
+          +two-columns-right
+            +content-zone
+              h3 Исследовательско-экспериментальная база
+              p Испытательная станция, предназначенная для испытаний полноразмерных узлов камер сгорания энергетических ГТУ средней и большой мощности, была введена в эксплуатацию в 2006 году. На станции проводились испытания и доводка камер сгорания для ГТЭ-65 и ГТЭ-170. В настоящее время на испытательной станции проводится подготовка  стенда огневых испытаний к проведению испытаний камер сгорания ГТЭ-65.1 и ГТЭ-170.1 на натурных параметрах для проверки конструктивных решений по их влиянию на основные характеристики и экологические показатели: отработка режимов пуска, переменных режимов, режимов сброса нагрузки, режимов останова камер сгорания ГТУ.
+              p Помимо этого, компания обладает уникальным испытательным оборудованием, в том числе балансировочным стендом роторов Schenck c вакуумной камерой, позволяющей испытывать габаритные роторы газовых и паровых турбин мощностью до 1200 МВт.
+
+        +slider
+
+  +section
+    .container
+      +section-header
         +section-title Команда
       +section-content
         +team
 
+  +section
+    .container
+      +vacancies
+
+  +section
+    .container
+      +contacts
+
   +footer
+  +popups
