--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -20,20 +20,23 @@ $breakpoints: (
 // ##########
 // Цвета
 // ##########
-$color-basic: #333333; // Основной цвет текста (применяется к body)
+$color-basic: #333; // Основной цвет текста (применяется к body)
 $color-placeholder: #777; // Основной цвет для placeholder
 $color-input: black; // Основной цвет input, select и textarea
-$color-main: #018AA6; // Основной фирменный цвет
+$color-main: #018aa6; // Основной фирменный цвет
 $color-border: #ccc; // Основной цвет границ таблиц, секций
 
-$color-blue: #0F709E;
+$color-blue: #0f709e;
 $color-gray-3: #828282;
-$color-gray-5: #E0E0E0;
-$color-gray-6: #F2F2F2;
+$color-gray-5: #e0e0e0;
+$color-gray-6: #f2f2f2;
 
-$color-main-dark: #00768E;
-$color-grey-1: #F9F9F9;
-$color-grey-2: #C4C4C4;
+$color-main-dark: #00768e;
+$color-grey-1: #f9f9f9;
+$color-grey-2: #c4c4c4;
+$color-grey-3: #f5f5f5;
+$color-dark-1: #212121;
+$color-dark-2: #4f4f4f;
 
 // ##########
 // Массив цветов для UI-кита
