--- a/app/blocks/table/table.pug
+++ b/app/blocks/table/table.pug
@@ -1,5 +1,5 @@
 mixin table()
-  table.table&attributes(attributes)(cellspacing="0", class=addclass)
+  +b.TABLE.table&attributes(attributes)(cellspacing="0", cellpadding="0")
     block
 
 mixin ui-kit-table()
