--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -1,22 +1,45 @@
 .table {
   display: table;
-  font-size: 14px;
+  font-size: 13px;
+  line-height: 1.4;
+  width: 100%;
+  table-layout: auto;
 
-  tr {
+  $b: &;
+
+  &__row {
     padding: 0;
     margin: 0;
-    display: block;
-    border-bottom: 1px solid $color-border;
   }
 
-  thead tr {
-    border-width: 2px;
-  }
-
-  td {
-    padding: $grid-gap/2 $grid-gap $grid-gap/2 0;
+  &__col {
+    padding: 22px 0;
     vertical-align: top;
+    border-bottom: 1px solid rgba(130, 130, 130, .12);
 
-    &:last-child { padding-right: 0; }
+    #{$b}__row:first-child & {
+      padding-top: 0;
+    }
+
+    &_title {
+
+    }
+
+    &_head {
+      border-bottom-color: white;
+    }
+
+    &_value {
+      font-weight: 700;
+      width: 240px;
+
+      &_small {
+        width: auto;
+      }
+    }
+
+    &:not(:first-child) {
+      padding-left: 30px;
+    }
   }
 }
