--- a/app/components/contacts/contacts.pug
+++ b/app/components/contacts/contacts.pug
@@ -2,16 +2,36 @@ mixin contacts()
   +b.contacts&attributes(attributes)
     +e.left
       +e.H2.title Контакты
-      +e.P.subtitle Специальное конструкторскою бюро газотурбинных установок
-      +e.contacts
-        p Тел. +7 (812) 346 70 37
-        p E-mail <a href="mailto:mail@power-m.ru">mail@power-m.ru</a>
+
+      +e.group
+        +e.P.subtitle Фокин Николай Иванович, главный конструктор - Начальник СКБ ГТУ
+        +e.contacts
+          p Тел. +7 (812) 326-70-12, +7 (931) 225-58-41
+          p E-mail <a href="mailto:Fokin_NI@power-m.ru">Fokin_NI@power-m.ru</a>
+
+      +e.group
+        +e.P.subtitle Барудкин Виктор Владимирович, главный конструктор проекта ГТЭ-170 - заместитель начальника СКБ ГТУ
+        +e.contacts
+          p Тел. +7 (812) 326-77-78, доб. 4-61-10, +7 (931) 225-59-12
+          p E-mail <a href="mailto:Barudkin_VV@power-m.ru">Barudkin_VV@power-m.ru</a>
+
+      +e.group
+        +e.P.subtitle Непомнящий Владимир Олегович, главный конструктор проекта ГТЭ-65
+        +e.contacts
+          p Тел. +7 (812) 326-77-78, доб. 4-55-72, +7 (931) 281-41-68
+          p E-mail <a href="mailto:Nepomnyaschiy_VO@power-m.ru">Nepomnyaschiy_VO@power-m.ru</a>
+
+      +e.group
+        +e.P.subtitle Приемная СКБ ГТУ, помощник руководителей
+        +e.contacts
+          p Тел. +7 (812) 326-77-78, доб. 4-43-00
 
     +e.right
-      +e.P.subtitle Контакты HR
-      +e.contacts
-        p Тел. +7 (812) 346 70 37
-        p E-mail <a href="mailto:mail@power-m.ru">mail@power-m.ru</a>
+      +e.group
+        +e.P.subtitle Контакты HR
+        +e.contacts
+          // p Тел. +7 (812) 346 70 37
+          p E-mail <a href="mailto:recruitment@power-m.ru">recruitment@power-m.ru</a>
 
 mixin ui-kit-contacts()
   +ui-section
