--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -6,14 +6,14 @@ block head
 block content
   +header
   +offer#offer
-  +section
+  +section#about
     .container
       +two-columns
         +two-columns-left
           +section-header
             +section-title О проекте
           +section-content
-            +section-description Сегодня на территории Российской Федерации свыше 30 ГВт генерирующих мощностей работают в парогазовом цикле. Доля оборудования иностранных компаний в суммарной установленной мощности введенных в эксплуатацию ПГУ и ГТУ составляет более 70%.
+            +section-description._about Сегодня на территории Российской Федерации свыше 30 ГВт генерирующих мощностей работают в парогазовом цикле. Доля оборудования иностранных компаний в суммарной установленной мощности введенных в эксплуатацию ПГУ и ГТУ составляет более 70%.
             +content-zone
               img(src="assets/images/content/1.jpg")
               p
@@ -32,7 +32,15 @@ block content
           +news(getData('news'))
           +video
 
-  +section
+  +section.section_dark#objectOne
+    .container
+      +object(getData('objects')[0])
+
+  +section.section_dark.section_dark_blue#objectTwo
+    .container
+      +object(getData('objects')[1])
+
+  +section#manufacturing
     .container
       +section-header
         +section-title Производство
@@ -56,18 +64,18 @@ block content
 
         +slider
 
-  +section
+  +section#team
     .container
       +section-header
         +section-title Команда
       +section-content
         +team
 
-  +section
+  +section#vacancies
     .container
       +vacancies
 
-  +section
+  +section#contacts
     .container
       +contacts
 
