--- a/app/components/team/team.scss
+++ b/app/components/team/team.scss
@@ -45,6 +45,14 @@
       margin-top: 14px;
     }
 
+    a {
+      color: $color-blue;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
     p {
 
       &:not(:first-child) {
